prepare days 6, 7, 8 and 9; add day 5 input and tests